adiciona novo device ao ficheiro

--- a/app/SigFox/app/src/main/AndroidManifest.xml
+++ b/app/SigFox/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LogsActivity" />
-        <activity android:name=".CreateLogActivity"></activity>
+        <activity android:name=".CreateLogActivity" />
+        <activity android:name=".AddDeviceActivity"></activity>
     </application>
 
 </manifest>
