--- a/app/SigFox/app/src/main/AndroidManifest.xml
+++ b/app/SigFox/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:noHistory="true">
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +19,8 @@
         </activity>
         <activity android:name=".LogsActivity" />
         <activity android:name=".CreateLogActivity" />
-        <activity android:name=".AddDeviceActivity"></activity>
+        <activity android:name=".AddDeviceActivity" />
+        <activity android:name=".NewAlarmActivity"></activity>
     </application>
 
 </manifest>
